pkg/app/pipedv1/plugin/kubernetes/deployment/testdata/traffic_routing_istio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traffic-test
spec:
  selector:
    app: traffic-test
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
